--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="boxs">
             <h1>General Science Syllabus</h1>
-            <img src="General science.jpeg" alt="">
+            <img src="General Science.jpeg" alt="">
         </div>
         <div class="boxs">
             <h1>General Studies Syllabus</h1>
