--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <h1>General Studies Syllabus</h1>
             <img src="General Studies.jpeg" alt="">
         </div>
+        <div>
+           <img src="Social_syll_breakdown.jpeg" alt=""> 
+        </div>
         <div class="boxs">
             <h1>Hindi Syllabus</h1>
             <img src="Hindi.jpeg" alt="">
