--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <div>
            <img src="Social_syll_breakdown.jpeg" alt=""> 
         </div>
+        <div>
+            <img src="syllabus breakdown 2.jpg" alt="">
+        </div>
         <div class="boxs">
             <h1>Hindi Syllabus</h1>
             <img src="Hindi.jpeg" alt="">
